# py-module-inputButBetter

./: README.md  environment.yml  pyproject.toml
src/inputButBetter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/inputbutbetter/: main.py
tests/: test_1.py
